--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
     - name: Install dependencies
       if: steps.cache-pipenv.outputs.cache-hit != 'true'
       run: |
-        pipenv install --deploy
+        pipenv install --deploy --dev
         #pipenv install --deploy --dev #by using dev, ipdb fails to install (and is not required for CI)
 
     - name: Lint with isort
