--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,9 @@ python_version = "3.9"
 [scripts]
 format-black = "black ./src"
 format-isort = "isort ./src"
-lint = "pylint ./src"
+lint-black = "black ./src --check --diff"
+lint-isort = "isort ./src --check --diff --profile black"
+lint-pylint = "pylint ./src"
 type-check = "mypy ./src"
 apidoc = "sphinx-apidoc ./src -o ./docs/source"
 sphinx = "sphinx-build -c ./docs/source -b markdown ./docs/source ./docs/build"
