--- a/Pipfile
+++ b/Pipfile
@@ -25,12 +25,12 @@ sphinx-markdown-builder = "*"
 python_version = "3.9"
 
 [scripts]
-format-black = "black ./src"
-format-isort = "isort ./src"
-lint-black = "black ./src --check --diff"
-lint-isort = "isort ./src --check --diff --profile black"
-lint-pylint = "pylint ./src"
-type-check = "mypy ./src"
-apidoc = "sphinx-apidoc ./src -o ./docs/source"
+format-black = "black ./graphql_jwt_oauth2"
+format-isort = "isort ./graphql_jwt_oauth2"
+lint-black = "black ./graphql_jwt_oauth2 --check --diff"
+lint-isort = "isort ./graphql_jwt_oauth2 --check --diff --profile black"
+lint-pylint = "pylint ./graphql_jwt_oauth2"
+type-check = "mypy ./graphql_jwt_oauth2"
+apidoc = "sphinx-apidoc ./graphql_jwt_oauth2 -o ./docs/source"
 sphinx = "sphinx-build -c ./docs/source -b markdown ./docs/source ./docs/build"
 # PIPENV_DOTENV_LOCATION=$(pwd)/.env.prod
